# barterhub

./: .gitignore  pyproject.toml
barterhub/: db.sqlite3  manage.py  urls.py
barterhub/ads/: admin.py  models.py  serializers.py  views.py
barterhub/ads/migrations/: 0001_initial.py  0002_alter_ad_category_alter_ad_condition_and_more.py
barterhub/barterhub/: asgi.py  settings.py  urls.py  wsgi.py
